# barbot-core

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.kilocode/: mcp.json
data/: INSTRUCTION_SETS.json  INVENTORY.json  RECIPES.json
src/models/: __init__.py  schemas.py
src/scripts/normalization/: generate_inventory.py  normalize_ingredients.py
src/scripts/scraping/: fetch_thecocktaildb.py  generate_iba_data.py
src/scripts/validation/: validate_recipes.py
tests/: __init__.py  test_data_integrity.py  test_fetch_thecocktaildb.py  test_generate_inventory.py  test_models.py  test_normalize_ingredients.py  test_validate_recipes.py
