[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "barbot-core"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.0.0",
    "beautifulsoup4>=4.0.0",
    "lxml>=5.0.0",
    "structlog>=24.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]